--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -11,7 +11,23 @@
     "title": "نوآوری الهی با توسعه مدرن",
     "subtitle": "داشبوردهای مدیریتی منبع باز ساخته شده با فناوری‌های پیشرفته. آماده تولید، قابل تنظیم و غنی از ویژگی‌ها.",
     "getStarted": "شروع کنید",
-    "viewProjects": "مشاهده پروژه‌ها"
+    "viewProjects": "مشاهده پروژه‌ها",
+    "stats": {
+      "components": "۵۰+",
+      "componentsLabel": "کامپوننت",
+      "downloads": "۱۰هزار+",
+      "downloadsLabel": "دانلود",
+      "opensource": "۱۰۰%",
+      "opensourceLabel": "منبع باز",
+      "support": "۲۴/۷",
+      "supportLabel": "جامعه"
+    },
+    "socialProof": {
+      "trustedBy": "توسط توسعه‌دهندگان در سراسر جهان مورد اعتماد",
+      "companies": "شرکت‌های پیشرو از داشبوردهای ما استفاده می‌کنند",
+      "stars": "۴.۹/۵",
+      "starsLabel": "امتیاز متوسط"
+    }
   },
   "projects": {
     "title": "پروژه‌های ما",
@@ -27,7 +43,13 @@
     },
     "viewDemo": "مشاهده دمو",
     "viewDocs": "مشاهده مستندات",
-    "viewCode": "مشاهده کد"
+    "viewCode": "مشاهده کد",
+    "cta": {
+      "title": "آماده ساختن چیزی شگفت‌انگیز هستید؟",
+      "subtitle": "به هزاران توسعه‌دهنده بپیوندید که از God Plan برای ایجاد داشبوردهای مدیریتی مدرن استفاده می‌کنند.",
+      "getStarted": "همین حالا شروع کنید",
+      "viewGithub": "مشاهده در گیت‌هاب"
+    }
   },
   "features": {
     "title": "چرا God Plan را انتخاب کنید؟",
@@ -52,6 +74,24 @@
       "secure": {
         "title": "امن به طور پیش‌فرض",
         "description": "ساخته شده با بهترین روش‌های امنیتی و به‌روزرسانی‌های منظم امنیتی"
+      }
+    },
+    "benefits": {
+      "title": "ساخته شده برای توسعه‌دهندگان، مورد علاقه تیم‌ها",
+      "subtitle": "به جامعه‌ای از توسعه‌دهندگان بپیوندید که نسل بعدی داشبوردهای مدیریتی را می‌سازند",
+      "items": {
+        "developer": {
+          "title": "تجربه توسعه‌دهنده",
+          "description": "APIهای بصری و مستندات جامع"
+        },
+        "production": {
+          "title": "آماده تولید",
+          "description": "کامپوننت‌های تست‌شده در نبرد و بهترین روش‌ها"
+        },
+        "community": {
+          "title": "جامعه جهانی",
+          "description": "جامعه فعال و به‌روزرسانی‌های منظم"
+        }
       }
     }
   },
@@ -98,7 +138,32 @@
         ]
       }
     },
-    "cta": "شروع کنید"
+    "cta": "شروع کنید",
+    "faq": {
+      "title": "سوالات متداول",
+      "questions": {
+        "commercial": {
+          "question": "آیا می‌توانم از God Plan برای پروژه‌های تجاری استفاده کنم؟",
+          "answer": "بله! God Plan منبع باز است و می‌توانید از آن برای پروژه‌های شخصی و تجاری استفاده کنید."
+        },
+        "enterprise": {
+          "question": "آیا پشتیبانی سازمانی ارائه می‌دهید؟",
+          "answer": "بله، ما پشتیبانی اختصاصی سازمانی با توسعه سفارشی، پشتیبانی اولویت‌دار و گزینه‌های استقرار در محل ارائه می‌دهیم."
+        },
+        "documentation": {
+          "question": "مستندات شامل چه چیزهایی می‌شود؟",
+          "answer": "مستندات ما شامل مراجع API، راهنماهای کامپوننت، دستورالعمل‌های استقرار و بهترین روش‌ها برای همه پروژه‌ها است."
+        },
+        "customization": {
+          "question": "داشبوردها چقدر قابل سفارشی‌سازی هستند؟",
+          "answer": "بسیار قابل سفارشی‌سازی! می‌توانید تم‌ها، چیدمان‌ها، کامپوننت‌ها را تغییر دهید و ویژگی‌های خود را اضافه کنید."
+        },
+        "updates": {
+          "question": "چقدر اغلب به‌روزرسانی منتشر می‌کنید؟",
+          "answer": "ما به‌روزرسانی‌های منظمی با ویژگی‌های جدید، وصله‌های امنیتی و بهبودهای عملکرد منتشر می‌کنیم. انتشارهای اصلی هر سه ماه یک بار انجام می‌شود."
+        }
+      }
+    }
   },
   "contact": {
     "title": "با ما در تماس باشید",
@@ -109,7 +174,34 @@
       "company": "شرکت",
       "message": "پیام",
       "submit": "ارسال پیام"
-    }
+    },
+    "info": {
+      "email": {
+        "title": "ایمیل",
+        "value": "'godplan.dev'",
+        "subtitle": "در عرض ۲۴ ساعت پاسخ خواهیم داد"
+      },
+      "github": {
+        "title": "گیت‌هاب",
+        "value": "'@god-plan'",
+        "subtitle": "مشکلات را گزارش دهید و مشارکت کنید"
+      },
+      "discord": {
+        "title": "جامعه",
+        "value": "سرور Discord",
+        "subtitle": "به بحث‌های جامعه ما بپیوندید"
+      }
+    },
+    "newsletter": {
+      "title": "به روز بمانید",
+      "subtitle": "آخرین به‌روزرسانی‌ها در مورد ویژگی‌های جدید، انتشارها و آموزش‌ها را دریافت کنید.",
+      "placeholder": "ایمیل خود را وارد کنید",
+      "subscribe": "اشتراک",
+      "success": "با تشکر از اشتراک شما! آخرین به‌روزرسانی‌های ما را دریافت خواهید کرد.",
+      "error": "لطفاً آدرس ایمیل خود را وارد کنید"
+    },
+    "success": "با تشکر از پیام شما! به زودی با شما تماس خواهیم گرفت.",
+    "error": "خطایی در ارسال پیام رخ داد. لطفاً دوباره امتحان کنید."
   },
   "footer": {
     "description": "داشبوردهای مدیریتی مدرن ساخته شده با نوآوری الهی و فناوری پیشرفته.",
