--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -5,17 +5,18 @@
     "features": "ویژگی‌ها",
     "pricing": "قیمت‌گذاری",
     "contact": "تماس",
-    "docs": "مستندات"
+    "docs": "مستندات",
+    "language": "زبان"
   },
   "hero": {
-    "title": "نوآوری الهی با توسعه مدرن",
-    "subtitle": "داشبوردهای مدیریتی منبع باز ساخته شده با فناوری‌های پیشرفته. آماده تولید، قابل تنظیم و غنی از ویژگی‌ها.",
+    "title": "داشبوردهای حرفه‌ای، صفحه‌های فرود و کیت‌های رابط کاربری",
+    "subtitle": "راه‌حل‌های کامل منبع‌باز برای برنامه‌های وب مدرن. از داشبوردهای مدیریتی تا صفحه‌های فرود و کیت‌های کامپوننت قابل استفاده مجدد - همه چیز مورد نیاز برای ایجاد تجربیات دیجیتال استثنایی.",
     "getStarted": "شروع کنید",
     "viewProjects": "مشاهده پروژه‌ها",
     "stats": {
-      "components": "۵۰+",
+      "components": "۱۰۰+",
       "componentsLabel": "کامپوننت",
-      "downloads": "۱۰هزار+",
+      "downloads": "۲۵هزار+",
       "downloadsLabel": "دانلود",
       "opensource": "۱۰۰%",
       "opensourceLabel": "منبع باز",
@@ -23,15 +24,15 @@
       "supportLabel": "جامعه"
     },
     "socialProof": {
-      "trustedBy": "توسط توسعه‌دهندگان در سراسر جهان مورد اعتماد",
-      "companies": "شرکت‌های پیشرو از داشبوردهای ما استفاده می‌کنند",
+      "trustedBy": "توسط توسعه‌دهندگان و شرکت‌ها در سراسر جهان مورد اعتماد",
+      "companies": "شرکت‌های پیشرو با راه‌حل‌های ما می‌سازند",
       "stars": "۴.۹/۵",
       "starsLabel": "امتیاز متوسط"
     }
   },
   "projects": {
-    "title": "پروژه‌های ما",
-    "subtitle": "مجموعه داشبوردهای مدیریتی مدرن و ابزارهای ما را کاوش کنید",
+    "title": "مجموعه کامل ما",
+    "subtitle": "از داشبوردهای قدرتمند مدیریتی تا صفحه‌های فرود خیره‌کننده و کیت‌های رابط کاربری قابل استفاده مجدد - مجموعه جامع راه‌حل‌های وب مدرن ما را کشف کنید",
     "nuxt": {
       "description": "داشبورد مدیریتی مدرن ساخته شده با Nuxt.js، Vuetify و TypeScript"
     },
@@ -52,52 +53,52 @@
     }
   },
   "features": {
-    "title": "چرا God Plan را انتخاب کنید؟",
-    "subtitle": "ساخته شده با فناوری‌های مدرن و بهترین روش‌ها",
+    "title": "راه‌حل‌های کامل توسعه وب",
+    "subtitle": "همه چیز مورد نیاز برای ساخت برنامه‌های وب حرفه‌ای، از داشبوردها تا صفحه‌های فرود",
     "items": {
       "modern": {
-        "title": "طراحی مدرن",
-        "description": "رابط‌های زیبا و ریسپانسیو ساخته شده با اصول طراحی مدرن"
+        "title": "داشبوردهای مدرن",
+        "description": "داشبوردهای مدیریتی حرفه‌ای با تجسم پیشرفته داده، مدیریت کاربر و تحلیل"
       },
       "fast": {
-        "title": "سریع مانند برق",
-        "description": "عملکرد بهینه شده با SSR، تقسیم کد و بارگذاری تنبل"
+        "title": "قالب‌های صفحه فرود",
+        "description": "صفحه‌های فرود بهینه‌سازی شده برای تبدیل که محصولات شما را به نمایش می‌گذارند و رشد کسب‌وکار را هدایت می‌کنند"
       },
       "responsive": {
-        "title": "کاملاً ریسپانسیو",
-        "description": "تجربه عالی در همه دستگاه‌ها و اندازه‌های صفحه"
+        "title": "کیت‌های کامپوننت رابط کاربری",
+        "description": "کتابخانه‌های کامپوننت قابل استفاده مجدد برای سیستم‌های طراحی سازگار در تمام برنامه‌های شما"
       },
       "customizable": {
-        "title": "قابل تنظیم بالا",
-        "description": "به راحتی تم‌ها، چیدمان‌ها و کامپوننت‌ها را مطابق برند خود سفارشی کنید"
+        "title": "کاملاً قابل تنظیم",
+        "description": "به راحتی تم‌ها، چیدمان‌ها و کامپوننت‌ها را برای مطابقت کامل با هویت برند خود تطبیق دهید"
       },
       "secure": {
-        "title": "امن به طور پیش‌فرض",
-        "description": "ساخته شده با بهترین روش‌های امنیتی و به‌روزرسانی‌های منظم امنیتی"
+        "title": "امنیت سازمانی",
+        "description": "ساخته شده با بهترین روش‌های امنیتی، سیستم‌های احراز هویت و استانداردهای حفاظت از داده"
       }
     },
     "benefits": {
-      "title": "ساخته شده برای توسعه‌دهندگان، مورد علاقه تیم‌ها",
-      "subtitle": "به جامعه‌ای از توسعه‌دهندگان بپیوندید که نسل بعدی داشبوردهای مدیریتی را می‌سازند",
+      "title": "توسط توسعه‌دهندگان و کسب‌وکارهای جهانی مورد اعتماد",
+      "subtitle": "به هزاران شرکت بپیوندید که از راه‌حل‌های ما برای ساخت تجربیات دیجیتال استثنایی استفاده می‌کنند",
       "items": {
         "developer": {
-          "title": "تجربه توسعه‌دهنده",
-          "description": "APIهای بصری و مستندات جامع"
+          "title": "رویکرد توسعه‌دهنده‌محور",
+          "description": "APIهای بصری، مستندات جامع و معماری دوستانه توسعه‌دهنده"
         },
         "production": {
           "title": "آماده تولید",
-          "description": "کامپوننت‌های تست‌شده در نبرد و بهترین روش‌ها"
+          "description": "کد آزمایش‌شده با بهینه‌سازی عملکرد، مقیاس‌پذیری و قابلیت اطمینان"
         },
         "community": {
-          "title": "جامعه جهانی",
-          "description": "جامعه فعال و به‌روزرسانی‌های منظم"
+          "title": "اکوسیستم فعال",
+          "description": "جامعه در حال رشد، به‌روزرسانی‌های منظم و پشتیبانی اختصاصی برای همه محصولات"
         }
       }
     }
   },
   "pricing": {
-    "title": "قیمت‌گذاری ساده و شفاف",
-    "subtitle": "پلنی را انتخاب کنید که با نیازهای شما مطابقت دارد",
+    "title": "قیمت‌گذاری انعطاف‌پذیر برای هر پروژه",
+    "subtitle": "از راه‌حل‌های منبع‌باز رایگان تا ویژگی‌های سازمانی پریمیوم - پلن کامل را برای نیازهای توسعه خود پیدا کنید",
     "plans": {
       "free": {
         "name": "رایگان",
@@ -166,8 +167,8 @@
     }
   },
   "contact": {
-    "title": "با ما در تماس باشید",
-    "subtitle": "آماده شروع هستید؟ دوست داریم از شما بشنویم.",
+    "title": "آماده ساخت چیزی شگفت‌انگیز هستید؟",
+    "subtitle": "چه به داشبوردی نیاز داشته باشید، صفحه فرود یا کیت رابط کاربری - بیایید در مورد اینکه چگونه می‌توانیم به تحقق بینش شما کمک کنیم صحبت کنیم.",
     "form": {
       "name": "نام کامل",
       "email": "آدرس ایمیل",
@@ -183,7 +184,7 @@
       },
       "github": {
         "title": "گیت‌هاب",
-        "value": "'@god-plan'",
+        "value": "'god-plan'",
         "subtitle": "مشکلات را گزارش دهید و مشارکت کنید"
       },
       "discord": {
@@ -204,17 +205,26 @@
     "error": "خطایی در ارسال پیام رخ داد. لطفاً دوباره امتحان کنید."
   },
   "footer": {
-    "description": "داشبوردهای مدیریتی مدرن ساخته شده با نوآوری الهی و فناوری پیشرفته.",
+    "brand": "God Plan",
+    "description": "راه‌حل‌های کامل توسعه وب - از داشبوردهای حرفه‌ای و صفحه‌های فرود تا کیت‌های رابط کاربری و کتابخانه‌های کامپوننت قابل استفاده مجدد.",
     "links": {
       "products": "محصولات",
       "company": "شرکت",
-      "resources": "منابع"
+      "resources": "منابع",
+      "about": "درباره ما",
+      "contact": "تماس",
+      "github": "گیت‌هاب"
     },
     "social": {
       "github": "گیت‌هاب",
       "twitter": "توییتر",
       "discord": "دیسکورد"
     },
-    "copyright": "© ۲۰۲۵ God Plan. تمامی حقوق محفوظ است."
+    "copyright": "© ۲۰۲۵ God Plan. تمامی حقوق محفوظ است.",
+    "privacy": "سیاست حفظ حریم خصوصی",
+    "terms": "شرایط استفاده"
+  },
+  "header": {
+    "brand": "God Plan"
   }
 }
