--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -6,7 +6,8 @@
     "pricing": "قیمت‌گذاری",
     "contact": "تماس",
     "docs": "مستندات",
-    "language": "زبان"
+    "language": "زبان",
+    "github": "گیت‌هاب"
   },
   "hero": {
     "title": "داشبوردهای حرفه‌ای، صفحه‌های فرود و کیت‌های رابط کاربری",
@@ -213,7 +214,8 @@
       "resources": "منابع",
       "about": "درباره ما",
       "contact": "تماس",
-      "github": "گیت‌هاب"
+      "github": "گیت‌هاب",
+      "docs": "مستندات"
     },
     "social": {
       "github": "گیت‌هاب",
