--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -10,8 +10,8 @@
     "github": "گیت‌هاب"
   },
   "hero": {
-    "title": "داشبوردهای حرفه‌ای، صفحه‌های فرود و کیت‌های رابط کاربری",
-    "subtitle": "راه‌حل‌های کامل منبع‌باز برای برنامه‌های وب مدرن. از داشبوردهای مدیریتی تا صفحه‌های فرود و کیت‌های کامپوننت قابل استفاده مجدد - همه چیز مورد نیاز برای ایجاد تجربیات دیجیتال استثنایی.",
+    "title": "داشبوردهای حرفه‌ای، صفحه‌های لندینگ و کیت‌های رابط کاربری",
+    "subtitle": "راه‌حل‌های کامل منبع‌باز برای برنامه‌های وب مدرن. از داشبوردهای مدیریتی تا صفحه‌های لندینگ و کیت‌های کامپوننت قابل استفاده مجدد - همه چیز مورد نیاز برای ایجاد تجربیات دیجیتال استثنایی.",
     "getStarted": "شروع کنید",
     "viewProjects": "مشاهده پروژه‌ها",
     "stats": {
@@ -33,7 +33,7 @@
   },
   "projects": {
     "title": "مجموعه کامل ما",
-    "subtitle": "از داشبوردهای قدرتمند مدیریتی تا صفحه‌های فرود خیره‌کننده و کیت‌های رابط کاربری قابل استفاده مجدد - مجموعه جامع راه‌حل‌های وب مدرن ما را کشف کنید",
+    "subtitle": "از داشبوردهای قدرتمند مدیریتی تا صفحه‌های لندینگ خیره‌کننده و کیت‌های رابط کاربری قابل استفاده مجدد - مجموعه جامع راه‌حل‌های وب مدرن ما را کشف کنید",
     "nuxt": {
       "description": "داشبورد مدیریتی مدرن ساخته شده با Nuxt.js، Vuetify و TypeScript"
     },
@@ -55,15 +55,15 @@
   },
   "features": {
     "title": "راه‌حل‌های کامل توسعه وب",
-    "subtitle": "همه چیز مورد نیاز برای ساخت برنامه‌های وب حرفه‌ای، از داشبوردها تا صفحه‌های فرود",
+    "subtitle": "همه چیز مورد نیاز برای ساخت برنامه‌های وب حرفه‌ای، از داشبوردها تا صفحه‌های لندینگ",
     "items": {
       "modern": {
         "title": "داشبوردهای مدرن",
         "description": "داشبوردهای مدیریتی حرفه‌ای با تجسم پیشرفته داده، مدیریت کاربر و تحلیل"
       },
       "fast": {
-        "title": "قالب‌های صفحه فرود",
-        "description": "صفحه‌های فرود بهینه‌سازی شده برای تبدیل که محصولات شما را به نمایش می‌گذارند و رشد کسب‌وکار را هدایت می‌کنند"
+        "title": "قالب‌های صفحه لندینگ",
+        "description": "صفحه‌های لندینگ بهینه‌سازی شده برای تبدیل که محصولات شما را به نمایش می‌گذارند و رشد کسب‌وکار را هدایت می‌کنند"
       },
       "responsive": {
         "title": "کیت‌های کامپوننت رابط کاربری",
@@ -169,7 +169,7 @@
   },
   "contact": {
     "title": "آماده ساخت چیزی شگفت‌انگیز هستید؟",
-    "subtitle": "چه به داشبوردی نیاز داشته باشید، صفحه فرود یا کیت رابط کاربری - بیایید در مورد اینکه چگونه می‌توانیم به تحقق بینش شما کمک کنیم صحبت کنیم.",
+    "subtitle": "چه به داشبوردی نیاز داشته باشید، صفحه لندینگ یا کیت رابط کاربری - بیایید در مورد اینکه چگونه می‌توانیم به تحقق بینش شما کمک کنیم صحبت کنیم.",
     "form": {
       "name": "نام کامل",
       "email": "آدرس ایمیل",
@@ -207,7 +207,7 @@
   },
   "footer": {
     "brand": "God Plan",
-    "description": "راه‌حل‌های کامل توسعه وب - از داشبوردهای حرفه‌ای و صفحه‌های فرود تا کیت‌های رابط کاربری و کتابخانه‌های کامپوننت قابل استفاده مجدد.",
+    "description": "راه‌حل‌های کامل توسعه وب - از داشبوردهای حرفه‌ای و صفحه‌های لندینگ تا کیت‌های رابط کاربری و کتابخانه‌های کامپوننت قابل استفاده مجدد.",
     "links": {
       "products": "محصولات",
       "company": "شرکت",
