--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -181,7 +181,7 @@
     "info": {
       "email": {
         "title": "ایمیل",
-        "value": "'godplan.dev'",
+        "value": "parsajiravand",
         "subtitle": "در عرض ۲۴ ساعت پاسخ خواهیم داد"
       },
       "github": {
